--- a/5-objects/_objects.icons.scss
+++ b/5-objects/_objects.icons.scss
@@ -210,6 +210,7 @@ $code-triangle-down:  '\25be';
 .link--external {
     &:after {
         @include iconify( inline, $ico-code-ext-link );
+        text-decoration: none; // IE11+ fix to remove underline from icons
         margin-left: .35em;
     }
 }
