--- a/7-trumps/_trumps.site-header.scss
+++ b/7-trumps/_trumps.site-header.scss
@@ -8,9 +8,11 @@
 //Special media break
 $menu-break: new-breakpoint( min-width $tablet-min-width max-width 1200px $tablet-grid-columns);
 
-$logo-mobile-width: 11rem;
+$logo-mobile-width: 12rem;
 $logo-tablet-height: 5.7rem;
 
+
+.header-wrapper { overflow: hidden; } // IE11 inflated header fix
 
 .site-header {
     position: relative;
@@ -31,6 +33,8 @@ $logo-tablet-height: 5.7rem;
         > a {
             @include hoverify() { opacity: .7; }
         }
+
+        img { width: 100%; }
 
         @include media( $tablet-and-bigger ) {
             float: left;
@@ -56,8 +60,7 @@ $logo-tablet-height: 5.7rem;
         @include media( $mobile-large-and-smaller ) {
             margin: 0 .75em;
             padding: 1.5em 0 1em;
-
-            img { width: $logo-mobile-width; }
+            width: $logo-mobile-width;
         }
     }
 
